--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+    html{
+background-color: antiquewhite;
+    }
+    
     main{
         display: grid;
         grid-template-columns: 150px 150px 150px 150px;
