--- a/style.css
+++ b/style.css
@@ -6,9 +6,26 @@ background-color: antiquewhite;
         display: grid;
         grid-template-columns: 150px 150px 150px 150px;
         background-color: goldenrod;
-        grid-template-rows: 150px;
+        grid-template-rows: 400px;
         width: 600px;
     }
-    img{
+    main > div{
+        border: 4px solid black;
         margin: 10px;
-        }
+        
+    }
+    #one{
+        background-color: red;
+    }
+    #two{
+        background-color: green;
+    }
+
+    #three{
+        background-color: blue;
+    }
+
+    #four{
+        background-color: purple;
+    }
+    
